--- a/index.html
+++ b/index.html
@@ -1,11 +1,74 @@
-<html>
-<head><title>heading </title>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>DevOps Lifecycle</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: #f4f7f9;
+    }
+    h1 {
+      color: #2c3e50;
+    }
+    .lifecycle {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 30px;
+    }
+    .stage {
+      width: 150px;
+      height: 150px;
+      background: #3498db;
+      color: white;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      font-weight: bold;
+      font-size: 18px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+      transition: 0.3s;
+    }
+    .stage:hover {
+      background: #2ecc71;
+      transform: scale(1.1);
+    }
+    .arrow {
+      font-size: 40px;
+      color: #2c3e50;
+      align-self: center;
+    }
+  </style>
+</head>
 <body>
-<h1> github</h1>
-<h2>github</h2>
-<h3>github</h3>
-<h4>github</h4>
-<h5> github</h5>
+  <h1>DevOps Lifecycle</h1>
+  <p>The DevOps lifecycle includes continuous development, integration, testing, deployment, and monitoring.</p>
+
+  <div class="lifecycle">
+    <div class="stage">Plan</div>
+    <div class="arrow">➡</div>
+    <div class="stage">Develop</div>
+    <div class="arrow">➡</div>
+    <div class="stage">Build</div>
+    <div class="arrow">➡</div>
+    <div class="stage">Test</div>
+    <div class="arrow">➡</div>
+    <div class="stage">Release</div>
+    <div class="arrow">➡</div>
+    <div class="stage">Deploy</div>
+    <div class="arrow">➡</div>
+    <div class="stage">Operate</div>
+    <div class="arrow">➡</div>
+    <div class="stage">Monitor</div>
+  </div>
+
+  <footer style="margin-top:40px; font-size:14px; color:#555;">
+    © 2025 DevOps Lifecycle Visualization | Uploaded on GitHub & Deployed with Vercel
+  </footer>
 </body>
-<html>
+</html>
