--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
   <h1>DevOps Lifecycle</h1>
-  <p>The DevOps lifecycle includes continuous development, integration, testing, deployment, and monitoring.</p>
+  <p>The DevOps lifecycle includes continuous development, integration, testing, deployment, and monitoring...</p>
 
   <div class="lifecycle">
     <div class="stage">Plan</div>
@@ -71,4 +71,5 @@
     © 2025 DevOps Lifecycle Visualization | Uploaded on GitHub & Deployed with Vercel
   </footer>
 </body>
+
 </html>
