--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 </head>
 <body>
   <h1>DevOps Lifecycle</h1>
-  <p>The DevOps lifecycle includes continuous development, integration, testing, deployment, and monitoring...</p>
+  <p>The DevOps lifecycle includes continuous development, integration, testing, deployment, and monitoring.....</p>
 
   <div class="lifecycle">
     <div class="stage">Plan</div>
@@ -73,3 +73,4 @@
 </body>
 
 </html>
+
