--- a/index.html
+++ b/index.html
@@ -1,76 +1,43 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>DevOps Lifecycle</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background: #f4f7f9;
-    }
-    h1 {
-      color: #2c3e50;
-    }
-    .lifecycle {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 30px;
-    }
-    .stage {
-      width: 150px;
-      height: 150px;
-      background: #3498db;
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 50%;
-      font-weight: bold;
-      font-size: 18px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
-      transition: 0.3s;
-    }
-    .stage:hover {
-      background: #2ecc71;
-      transform: scale(1.1);
-    }
-    .arrow {
-      font-size: 40px;
-      color: #2c3e50;
-      align-self: center;
-    }
-  </style>
+<title>web application</title>
 </head>
 <body>
-  <h1>DevOps Lifecycle</h1>
-  <p>The DevOps lifecycle includes continuous development, integration, testing, deployment, and monitoring.....</p>
+<style>
+        body {
+            background-color: lightblue; /* background color */
+            font-family: Arial, sans-serif;
+            margin: 20px;
+        }
+        h1, h2 {
+            text-align: center; /* center headings */
+            color: darkblue;
+        }
+        p {
+            text-align: center; /* center paragraph */
+            font-size: 18px;
+        }
+        ul {
+            width: 300px;
+            margin: auto; /* center the list */
+            font-size: 16px;
+        }
+        img {
+            display: block;
+            margin: 20px auto; /* center the image */
+            width: 250px;
+        }
+    </style>
 
-  <div class="lifecycle">
-    <div class="stage">Plan</div>
-    <div class="arrow">➡</div>
-    <div class="stage">Develop</div>
-    <div class="arrow">➡</div>
-    <div class="stage">Build</div>
-    <div class="arrow">➡</div>
-    <div class="stage">Test</div>
-    <div class="arrow">➡</div>
-    <div class="stage">Release</div>
-    <div class="arrow">➡</div>
-    <div class="stage">Deploy</div>
-    <div class="arrow">➡</div>
-    <div class="stage">Operate</div>
-    <div class="arrow">➡</div>
-    <div class="stage">Monitor</div>
-  </div>
-
-  <footer style="margin-top:40px; font-size:14px; color:#555;">
-    © 2025 DevOps Lifecycle Visualization | Uploaded on GitHub & Deployed with Vercel
-  </footer>
-</body>
-
-</html>
-
+<h1>DevOps</h1>
+<img src="adhoc.jpg" alt="adhoc image", textalign:"center";>
+<p>An Adhoc network is a type of wireless network where devices connected directly to each other without any centeral devices</P>
+<h2>key features</h2>
+<ul type="square">
+<li>no infrastructure</li>
+<li>self configuring</li>
+<li>peer to peer communication</li>
+<li>dynamic topology</li>
+<ul>
+<h1>DevOps</h1>
+<img src="devops.jpg" alt="devops image">
