--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 <li>self configuring</li>
 <li>peer to peer communication</li>
 <li>dynamic topology</li>
+</ul>
 <ul>
 <h1>DevOps</h1>
 <img src="devops.jpg" alt="devops image">
+</ul>
+</body>
+</html>
